# teltonika-monitor

./: Dockerfile  README.md  main.py  pyproject.toml
