[tool.poetry]
name = "teltonika-monitor"
version = "0.1.0"
description = ""
authors = ["Adam Charnock <adam@adamcharnock.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
paramiko = "^2.6"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
